# client-server

./: .clang-format  .gitignore  README.md
client/: client_of.py  main.py
server/: CMakeLists.txt  config.txt  main.cpp
server/include/: server.h
server/include/data/: config.h  config_handler.h
server/include/generic/: log_utils.h  thread_pool.h
server/include/network/: connection.h  server.h
server/include/request/: manager.h  mock_data_table.h  statistic.h
server/include/request/models/: get.h  set.h
server/include/request/types/: irequest.h  iresult.h
server/src/: server.cpp
server/src/data/: config.cpp  config_handler.cpp
server/src/generic/: thread_pool.cpp
server/src/network/: connection.cpp  server.cpp
server/src/request/: manager.cpp  statistic.cpp
server/src/request/models/: get.cpp  set.cpp
